# ActiveYOLO

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
active_yolo/: active_learning.py  analyze_images.py  embed.py  generate_dataset.py  label_dataset.py  label_images.py  main.py  qualitive_video.py  train.py  verify_classifier.py
active_yolo/active_learning/: __init__.py  (+4 more)
configs/: app.yaml  data.yaml  train.yaml
docs/: DESIGN DOC.md
labels/: 3v3_groups_groups_vs_macu_standard_5_round_1_color_00011.txt  3v3_groups_groups_vs_macu_standard_5_round_1_color_01003.txt  3v3_groups_groups_vs_macu_standard_5_round_1_color_01184.txt  3v3_groups_groups_vs_macu_standard_5_round_1_color_02093.txt  3v3_groups_groups_vs_macu_standard_5_round_1_color_02257.txt  3v3_groups_groups_vs_macu_standard_5_round_1_color_02983.txt  3v3_groups_groups_vs_macu_standard_5_round_1_color_03294.txt  3v3_groups_groups_vs_macu_standard_5_round_1_color_10249.txt  3v3_groups_groups_vs_macu_standard_5_round_1_color_10869.txt  3v3_groups_groups_vs_macu_standard_5_round_1_color_11168.txt  3v3_groups_groups_vs_macu_standard_5_round_1_color_11544.txt  3v3_groups_groups_vs_macu_standard_5_round_2_color_00116.txt  3v3_groups_groups_vs_macu_standard_5_round_2_color_00828.txt  3v3_groups_groups_vs_macu_standard_5_round_2_color_05289.txt  3v3_groups_groups_vs_macu_standard_5_round_2_color_08011.txt  3v3_groups_groups_vs_macu_standard_5_round_2_color_09669.txt  3v3_groups_vs_polystar_standard_5_round_1_color_03826.txt  3v3_groups_vs_polystar_standard_5_round_1_color_07219.txt  (+26 more)
(+14 files in other folders)
