[project]
name = "activeyolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightly-train[ultralytics]>=0.13.0",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.240",
]
